overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@
 }
 
 .content {
-  @apply w-screen flex flex-col px-5 sm:px-10 min-h-screen text-white text-sm sm:text-lg bg-center !bg-fixed bg-cover
+  @apply w-screen flex flex-col px-5 sm:px-10 min-h-screen text-white text-sm sm:text-lg bg-center !bg-fixed bg-cover overflow-x-hidden
 }
 
 #about {
